--- a/templates/user/product/productshow.html
+++ b/templates/user/product/productshow.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Product view/show{% endblock %}
+{% block title %}Product view{% endblock %}
 {% load static %}
 {% load mathfilters %} 
 {% block body %} 
